--- a/index.html
+++ b/index.html
@@ -5,39 +5,46 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
-
+    <!-- Normalize -->
+    <!-- <link rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/0.6.0/modern-normalize.min.css"
+    > -->
+    <!-- Styles -->
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
     <!-- =================HEADER=================== -->
     <header>        
-        <nav class="navigation">
-            <a href="./index.html" class="logo-web link">Web<span class="logo-studio link">Studio</span></a>
-            <ul class="nav-menu list">
-                <li >
-                    <a href="./index.html" class="menu-item link">Studio</a>
-                </li>
-                <li>
-                    <a href="./portfolio.html" class="menu-item link">Portfolio</a>
-                </li>
-                <li>
-                    <a href="" class="menu-item link">Contacts</a>
-                </li>
-            </ul>
-        </nav>
-        <address class="adress">
-            <ul class="list">
-                <li>
-                    <a href="mailto:info@devstudio.com" class="contact link">info@devstudio.com</a>
-                </li>
-                <li>
-                    <a href="tel:+110001111111" class="contact link">+11 (000) 111-11-11</a>
-                </li>
-            </ul>
-        </address>
+        <div class="div-navigation">
+            <nav class="navigation">
+                <a href="./index.html" class="logo-web link">Web<span class="logo-studio link">Studio</span></a>
+                <ul class="nav-menu list">
+                    <li >
+                        <a href="./index.html" class="menu-item link">Studio</a>
+                    </li>
+                    <li>
+                        <a href="./portfolio.html" class="menu-item link">Portfolio</a>
+                    </li>
+                    <li>
+                        <a href="" class="menu-item link">Contacts</a>
+                    </li>
+                </ul>
+            </nav>
+            <address class="adress">
+                <ul class="list">
+                    <li>
+                        <a href="mailto:info@devstudio.com" class="contact link">info@devstudio.com</a>
+                    </li>
+                    <li>
+                        <a href="tel:+110001111111" class="contact link">+11 (000) 111-11-11</a>
+                    </li>
+                </ul>
+            </address>
+        </div>
     </header>
     <!-- =================/HEADER=================== -->
     <!-- =================MAIN=================== -->
