--- a/index.html
+++ b/index.html
@@ -97,12 +97,12 @@
         <!-- About work section -->
         <section class="about-work-section">
             <div class="container">
-            <h2 class="title-section-three">What are we doing</h2>
-            <ul class="list">
-                <li><img src="./images/comoputer.jpg" alt="computer" width="360"></li>
-                <li><img src="./images/phone.jpg" alt="phone" width="360"></li>
-                <li><img src="./images/phone-and-comp.jpg" alt="phone and computer" width="360"></li>
-            </ul>
+                <h2 class="title-section-three">What are we doing</h2>
+                <ul class="work-list list">
+                    <li class="item"><img src="./images/comoputer.jpg" alt="computer" width="360"></li>
+                    <li class="item"><img src="./images/phone.jpg" alt="phone" width="360"></li>
+                    <li class="item"><img src="./images/phone-and-comp.jpg" alt="phone and computer" width="360"></li>
+                </ul>
             </div>
         </section>
         <!-- /About work section -->
