--- a/index.html
+++ b/index.html
@@ -21,8 +21,10 @@
     <!-- =================HEADER=================== -->
     <header>        
             <nav class="navigation">
-                <div class="container">
-                    <a href="./index.html" class="logo-web link">Web<span class="logo-studio link">Studio</span></a>
+                <div class="container header-wrap">
+                    <div class="header-btn-wrap">
+                        <a href="./index.html" class="logo-web link">Web<span class="logo-studio link">Studio</span></a>
+                    </div>
                     <ul class="nav-menu list">
                         <li >
                             <a href="./index.html" class="menu-item link">Studio</a>
@@ -36,11 +38,11 @@
                     </ul>
                     
                     <address class="adress">
-                        <ul class="list">
-                            <li>
+                        <ul class="list adress-wrap-list">
+                            <li class="adress-wrap">
                                 <a href="mailto:info@devstudio.com" class="contact link">info@devstudio.com</a>
                             </li>
-                            <li>
+                            <li class="adress-wrap">
                                 <a href="tel:+110001111111" class="contact link">+11 (000) 111-11-11</a>
                             </li>
                         </ul>
@@ -111,21 +113,30 @@
             <div class="container">
                 <h2 class="title-section-three">Our Team</h2>
             <ul class="list">
-                <li class="team-card"><img src="./images/mark-guerrero.jpg" alt="Photo Mark Guerrero" width="264">
-                <h3 class="component-list-img">Mark Guerrero</h3>
-                <p class="component-list-item">Product Designer</p>
-                </li>
+                    <li class="team-card"><img src="./images/mark-guerrero.jpg" alt="Photo Mark Guerrero" width="264">
+                        <div class="team-item">
+                                <h3 class="component-list-img">Mark Guerrero</h3>
+                                <p class="component-list-item">Product Designer</p>
+                        </div>    
+                    </li>
+                
                 <li class="team-card"><img src="./images/tom-ford.jpg" alt="Photo Tom Ford" width="264">
-                <h3 class="component-list-img">Tom Ford</h3>
-                <p class="component-list-item">Frontend Developer</p>
+                    <div class="team-item">
+                        <h3 class="component-list-img">Tom Ford</h3>
+                        <p class="component-list-item">Frontend Developer</p>
+                    </div>   
                 </li>
                 <li class="team-card" ><img src="./images/camila-garcia.jpg" alt="Photo Camila Garcia" width="264">
-                <h3 class="component-list-img">Camila Garcia</h3>
-                <p class="component-list-item">Marketing</p>
+                    <div class="team-item">
+                        <h3 class="component-list-img">Camila Garcia</h3>
+                        <p class="component-list-item">Marketing</p>
+                    </div>
                 </li>
                 <li class="team-card"><img src="./images/daniel-wilson.jpg" alt="Photo Daniel Wilson" width="264">
-                <h3 class="component-list-img">Daniel Wilson</h3>
-                <p class="component-list-item">UI Designer</p>
+                    <div class="team-item">
+                        <h3 class="component-list-img">Daniel Wilson</h3>
+                        <p class="component-list-item">UI Designer</p>
+                    </div>
                 </li>
             </ul>
             </div>
@@ -135,8 +146,10 @@
     <!-- =================/MAIN=================== -->
     <!-- =================FOOTER=================== -->
     <footer class="footer">
+        <div class="footer-container">
         <a href="./index.html" class="logo-web link">Web<span class="logo-studio-footer link">Studio</span></a>
         <p class="footer-tips">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+        </div>    
     </footer>
     <!-- =================/FOOTER=================== -->
 </body>
