--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <!-- Normalize -->
-    <!-- <link rel="stylesheet"
+    <link rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/0.6.0/modern-normalize.min.css"
-    > -->
+    >
     <link rel="stylesheet" href="node_modules/modern-normalize/modern-normalize.css">
     <!-- Styles -->
     <link rel="stylesheet" href="./css/styles.css">
@@ -55,7 +55,7 @@
     <main>
         <!-- Hero section -->
             <section class="hero-section">
-                <div class="second-container">
+                <!-- <div class="second-container"> -->
                 <h1 class="hero-title">Effective Solutions
                     for Your Business
                 </h1>
