--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
     <!-- =================HEADER=================== -->
     <header>        
             <nav class="navigation">
-                <div class="container header-wrap">
-                    <div class="header-btn-wrap">
+                <div class="container ">
+                    <!-- <div class="header-btn-wrap"> -->
                         <a href="./index.html" class="logo-web link">Web<span class="logo-studio link">Studio</span></a>
-                    </div>
+                    <!-- </div> -->
                     <ul class="nav-menu list">
                         <li >
                             <a href="./index.html" class="menu-item link">Studio</a>
@@ -36,7 +36,6 @@
                             <a href="" class="menu-item link">Contacts</a>
                         </li>
                     </ul>
-                    
                     <address class="adress">
                         <ul class="list adress-wrap-list">
                             <li class="adress-wrap">
