--- a/portfolio.html
+++ b/portfolio.html
@@ -16,10 +16,10 @@
     <!-- =================HEADER=================== -->
     <header>        
         <nav class="navigation">
-            <div class="container header-wrap">
-                <div class="header-btn-wrap">
+            <div class="container ">
+                <!-- <div class="header-btn-wrap"> -->
                     <a href="./index.html" class="logo-web link">Web<span class="logo-studio link">Studio</span></a>
-                </div>
+                <!-- </div> -->
                 <ul class="nav-menu list">
                     <li >
                         <a href="./index.html" class="menu-item link">Studio</a>
