--- a/index.html
+++ b/index.html
@@ -19,35 +19,36 @@
 </head>
 <body>
     <!-- =================HEADER=================== -->
-    <header>        
+    <header class="header">
+        <div class="container header-container">     
             <nav class="navigation">
-                <div class="container ">
-                    <!-- <div class="header-btn-wrap"> -->
-                        <a href="./index.html" class="logo-web link">Web<span class="logo-studio link">Studio</span></a>
-                    <!-- </div> -->
-                    <ul class="nav-menu list">
-                        <li >
-                            <a href="./index.html" class="menu-item link">Studio</a>
+                <!-- <div class="header-btn-wrap"> -->
+                    <a href="./index.html" class="logo-web link">Web<span class="logo-studio link">Studio</span></a>
+                <!-- </div> -->
+                <ul class="nav-menu list">
+                    <li >
+                        <a href="./index.html" class="menu-item link">Studio</a>
+                    </li>
+                    <li>
+                        <a href="./portfolio.html" class="menu-item link">Portfolio</a>
+                    </li>
+                    <li>
+                        <a href="" class="menu-item link">Contacts</a>
+                    </li>
+                </ul>
+                
+                <address class="header-adress">
+                    <ul class="list adress-wrap-list">
+                        <li class="adress-wrap">
+                            <a href="mailto:info@devstudio.com" class="contact link">info@devstudio.com</a>
                         </li>
-                        <li>
-                            <a href="./portfolio.html" class="menu-item link">Portfolio</a>
-                        </li>
-                        <li>
-                            <a href="" class="menu-item link">Contacts</a>
+                        <li class="adress-wrap">
+                            <a href="tel:+110001111111" class="contact link">+11 (000) 111-11-11</a>
                         </li>
                     </ul>
-                    <address class="adress">
-                        <ul class="list adress-wrap-list">
-                            <li class="adress-wrap">
-                                <a href="mailto:info@devstudio.com" class="contact link">info@devstudio.com</a>
-                            </li>
-                            <li class="adress-wrap">
-                                <a href="tel:+110001111111" class="contact link">+11 (000) 111-11-11</a>
-                            </li>
-                        </ul>
-                    </address>
-                </div>
+                </address>
             </nav>
+        </div>
     </header>
     <!-- =================/HEADER=================== -->
     <!-- =================MAIN=================== -->
