--- a/portfolio.html
+++ b/portfolio.html
@@ -14,9 +14,9 @@
 </head>
 <body>
     <!-- =================HEADER=================== -->
-    <header>        
-        <nav class="navigation">
-            <div class="container ">
+    <header class="header">
+        <div class="container header-container">     
+            <nav class="navigation">
                 <!-- <div class="header-btn-wrap"> -->
                     <a href="./index.html" class="logo-web link">Web<span class="logo-studio link">Studio</span></a>
                 <!-- </div> -->
@@ -32,7 +32,7 @@
                     </li>
                 </ul>
                 
-                <address class="adress">
+                <address class="header-adress">
                     <ul class="list adress-wrap-list">
                         <li class="adress-wrap">
                             <a href="mailto:info@devstudio.com" class="contact link">info@devstudio.com</a>
@@ -42,9 +42,9 @@
                         </li>
                     </ul>
                 </address>
-            </div>
-        </nav>
-</header>
+            </nav>
+        </div>
+    </header>
     <!-- =================/HEADER=================== -->
     <!-- =================MAIN-portfolio=================== -->
     <main>
