--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
     <header class="header">
         <div class="container header-container">     
             <nav class="navigation">
-                <!-- <div class="header-btn-wrap"> -->
+                <div class="header-btn-wrap">
                     <a href="./index.html" class="logo-web link">Web<span class="logo-studio link">Studio</span></a>
-                <!-- </div> -->
+                </div>
                 <ul class="nav-menu list">
                     <li >
                         <a href="./index.html" class="menu-item link">Studio</a>
@@ -55,11 +55,12 @@
     <main>
         <!-- Hero section -->
             <section class="hero-section">
-                <!-- <div class="second-container"> -->
-                <h1 class="hero-title">Effective Solutions
-                    for Your Business
-                </h1>
-                <button type="button" class="hero-btn">Order Service</button>
+                <div class="container">
+                    <h1 class="hero-title">Effective Solutions
+                        for Your Business
+                    </h1>
+                    <button type="button" class="hero-btn">Order Service</button>
+                </div>
             </section>
             <!-- /Hero section -->
             <!-- Description -->
@@ -67,30 +68,30 @@
             <div class="container">
                 <h2 hidden class="title-section-two">features</h2>
                 <ul class="features list">
-                    <li>
-                        <div class="features-item">
+                    <li class="features-item">
+                        <!-- <div > -->
                             <h3 class="component-list">Strategy</h3>
                             <p class="component-list-item">Our goal is to identify the business
                                 problem to walk away with the perfect and creative solution.</p>
-                        </div>
+                        <!-- </div> -->
                     </li>
-                    <li>
-                        <div class="features-item">
+                    <li  class="features-item">
+                        <!-- <div> -->
                         <h3 class="component-list">Punctuality</h3>
                          <p class="component-list-item">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
-                        </div>
+                        <!-- </div> -->
                     </li>
-                    <li>
-                        <div class="features-item">
+                    <li  class="features-item">
+                        <!-- <div> -->
                         <h3 class="component-list">Diligence</h3>
                          <p class="component-list-item">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
-                        </div>
+                        <!-- </div> -->
                     </li>
-                    <li>
-                        <div class="features-item">
+                    <li  class="features-item">
+                        <!-- <div> -->
                         <h3 class="component-list">Technologies</h3>
                          <p class="component-list-item">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
-                        </div>
+                        <!-- </div> -->
                     </li>
                 </ul>
             </div>
