update css portfolio hw 03-4

--- a/portfolio.html
+++ b/portfolio.html
@@ -50,18 +50,19 @@
     <main>
         <section class="portfolio-menu">
             <div class="container">
-            <h1 hidden>Menu</h1>
-            <ul class="portfolio-btn-section list">
-                <li><button type="button" class="portfolio-menu-btn">All</button></li>
-                <li><button type="button" class="portfolio-menu-btn">Web Site</button></li>
-                <li><button type="button" class="portfolio-menu-btn">App</button></li>
-                <li><button type="button" class="portfolio-menu-btn">Design</button></li>
-                <li><button type="button" class="portfolio-menu-btn">Marketing</button></li>
-             </ul>
-            </div>
-            <div class="portfolio-img-section container">
+                <!-- <div class="container"> -->
+                <h1 hidden>Menu</h1>
+                <ul class="portfolio-btn-section list">
+                    <li><button type="button" class="portfolio-menu-btn">All</button></li>
+                    <li><button type="button" class="portfolio-menu-btn">Web Site</button></li>
+                    <li><button type="button" class="portfolio-menu-btn">App</button></li>
+                    <li><button type="button" class="portfolio-menu-btn">Design</button></li>
+                    <li><button type="button" class="portfolio-menu-btn">Marketing</button></li>
+                </ul>
+                <!-- </div> -->
+            <!-- <div class="portfolio-img-section container"> -->
                 <ul class="item-list list">
-                            <li class="item"> 
+                            <li class="item-portfolio"> 
                                 <a href="" class="link">
                                 <div class="portfolio-card">
                                     <img src="./images/interface.jpg" alt="interface" width="360" height="300">
@@ -70,7 +71,7 @@
                                 </div>    
                             </a>   
                             </li>
-                            <li class="item">
+                            <li class="item-portfolio">
                                 <a href="" class="link">
                                 <div class="portfolio-card">
                                     <img src="./images/payment.jpg" alt="payment" width="360" height="300">
@@ -79,7 +80,7 @@
                                 </div>    
                             </a> 
                             </li>
-                            <li class="item">
+                            <li class="item-portfolio">
                                 <a href="" class="link">
                                 <div class="portfolio-card">
                                     <img src="./images/app.jpg" alt="application" width="360" height="300">
@@ -88,7 +89,7 @@
                                 </div>    
                             </a>
                             </li>
-                            <li class="item">
+                            <li class="item-portfolio">
                                 <a href="" class="link">
                                 <div class="portfolio-card">
                                     <img src="./images/service.jpg" alt="taxi service" width="360" height="300">
@@ -97,7 +98,7 @@
                                 </div>    
                             </a>
                             </li>
-                            <li class="item">
+                            <li class="item-portfolio">
                                 <a href="" class="link">
                                 <div class="portfolio-card">
                                     <img src="./images/illustration.jpg" alt="screen illustration" width="360" height="300">
@@ -106,7 +107,7 @@
                                 </div>    
                             </a> 
                             </li>
-                            <li class="item">
+                            <li class="item-portfolio">
                                 <a href="" class="link">
                                 <div class="portfolio-card">
                                     <img src="./images/courses.jpg" alt="online courses" width="360" height="300">
@@ -115,7 +116,7 @@
                                 </div>    
                             </a>
                             </li>
-                            <li class="item">
+                            <li class="item-portfolio">
                                 <a href="" class="link">
                                 <div class="portfolio-card">
                                     <img src="./images/concept.jpg" alt="instagram stories concept" width="360" height="300">
@@ -124,7 +125,7 @@
                                 </div>    
                             </a>
                             </li>
-                            <li class="item">
+                            <li class="item-portfolio">
                                 <a href="" class="link">
                                 <div class="portfolio-card">
                                     <img src="./images/food.jpg" alt="organic food" width="360" height="300">
@@ -133,7 +134,7 @@
                                 </div>    
                             </a>
                             </li>
-                            <li class="item">
+                            <li class="item-portfolio">
                                 <a href="" class="link">
                                 <div class="portfolio-card">
                                     <img src="./images/coffee.jpg" alt="a cap of coffee" width="360" height="300">
