--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
     <!-- =================/MAIN=================== -->
     <!-- =================FOOTER=================== -->
     <footer class="footer">
-        <div class="footer-container">
+        <div class="footer-container container">
         <a href="./index.html" class="logo-web link">Web<span class="logo-studio-footer link">Studio</span></a>
         <p class="footer-tips">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
         </div>    
